--- a/.github/workflows/ci-jobs.yml
+++ b/.github/workflows/ci-jobs.yml
@@ -396,7 +396,16 @@ jobs:
     name: "⬇️ Download Artifacts"
     if: inputs.run_download_artifacts == true
     runs-on: ubuntu-latest
+    needs: build-and-test
     steps:
+      - name: Debug artifact name calculation
+        shell: bash
+        run: |
+          echo "🔍 DEBUG: Artifact name calculation"
+          echo "  node_version input: '${{ inputs.node_version }}'"
+          echo "  download_artifact_name input: '${{ inputs.download_artifact_name }}'"
+          echo "  Expected artifact name: ${{ inputs.download_artifact_name }}"
+
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
