fix(workflows): allow manual trigger for publish job on workflow_dispatch

--- a/examples/individual-repo-workflows/publish.yml
+++ b/examples/individual-repo-workflows/publish.yml
@@ -20,7 +20,7 @@ on:
 
 jobs:
   publish-package:
-    if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true || github.event_name == 'workflow_dispatch'
     uses: CLDMV/.github/.github/workflows/publish.yml@v1
     with:
       package_name: "@cldmv/slothlet" # Required: Your NPM package name
