--- a/.github/actions/npm/jobs/publish-github-packages/action.yml
+++ b/.github/actions/npm/jobs/publish-github-packages/action.yml
@@ -22,6 +22,10 @@ inputs:
   github-token:
     description: "GitHub token for authentication"
     required: true
+  artifact-name:
+    description: "Name of the build artifact to download"
+    required: false
+    default: "build-artifacts"
 
 outputs:
   published:
@@ -50,6 +54,7 @@ runs:
         package-manager: ${{ inputs.package-manager }}
         publish-command: ${{ inputs.publish-command }}
         auth-token: ${{ inputs.github-token }}
+        artifact-name: ${{ inputs.artifact-name }}
 
     - name: Update Summary - GitHub Packages Success
       if: steps.publish-package.outputs.published == 'true'
