--- a/.github/actions/npm/steps/create-package-files/action.yml
+++ b/.github/actions/npm/steps/create-package-files/action.yml
@@ -32,11 +32,11 @@ runs:
         if [ -d "package-contents" ]; then
           echo "✅ Using package-contents from current directory"
           PACKAGE_DIR="package-contents"
-          PACKAGE_JSON_PATH="package-contents/package.json"
+          PACKAGE_JSON_PATH="$(pwd)/package-contents/package.json"
         elif [ -d "artifacts/package-contents" ]; then
           echo "✅ Using package-contents from artifacts directory"
           PACKAGE_DIR="artifacts/package-contents"
-          PACKAGE_JSON_PATH="artifacts/package-contents/package.json"
+          PACKAGE_JSON_PATH="$(pwd)/artifacts/package-contents/package.json"
         else
           # Fallback: extract from .tgz file
           echo "📦 Extracting from .tgz file as fallback..."
@@ -56,7 +56,7 @@ runs:
           echo "📂 Extracting npm pack contents..."
           tar -xzf "$TGZ_FILE" -C "$TEMP_DIR"
           PACKAGE_DIR="$TEMP_DIR/package"
-          PACKAGE_JSON_PATH="$PACKAGE_DIR/package.json"
+          PACKAGE_JSON_PATH="$TEMP_DIR/package/package.json"
         fi
         
         # Get package name from package.json
