fix(actions): update publish command execution to use eval for better handling

--- a/.github/actions/npm/steps/publish-package/action.yml
+++ b/.github/actions/npm/steps/publish-package/action.yml
@@ -96,8 +96,12 @@ runs:
           exit 1
         fi
         
+        # Set the publish command
+        PUBLISH_CMD="${{ inputs.publish-command }}"
+        
         # Try to publish with the provided command
-        if ${{ inputs.publish-command }}; then
+        echo "🔧 Running command: $PUBLISH_CMD"
+        if eval "$PUBLISH_CMD"; then
           echo "✅ Successfully published using primary command"
           echo "published=true" >> $GITHUB_OUTPUT
         else
