--- a/.github/actions/git/steps/generate-release-notes/action.yml
+++ b/.github/actions/git/steps/generate-release-notes/action.yml
@@ -40,6 +40,14 @@ runs:
         echo "## 🚀 What's Changed" > RELEASE_NOTES.md
         echo "" >> RELEASE_NOTES.md
 
+        # Check for release commits first (these are usually the most important)
+        RELEASE_COMMITS=$(git log $COMMIT_RANGE --grep="^release:" --pretty=format:"- %s (%h)" | head -5)
+        if [[ -n "$RELEASE_COMMITS" ]]; then
+          echo "### 🎯 Release Highlights" >> RELEASE_NOTES.md
+          echo "$RELEASE_COMMITS" >> RELEASE_NOTES.md
+          echo "" >> RELEASE_NOTES.md
+        fi
+
         # Breaking Changes
         echo "### 💥 Breaking Changes" >> RELEASE_NOTES.md
         BREAKING=$(git log $COMMIT_RANGE --grep="!" --pretty=format:"- %s (%h)" | head -10)
@@ -72,9 +80,9 @@ runs:
         fi
         echo "" >> RELEASE_NOTES.md
 
-        # Other Changes
+        # Other Changes (exclude internal/maintenance commits)
         echo "### 🔧 Other Changes" >> RELEASE_NOTES.md
-        OTHER=$(git log $COMMIT_RANGE --invert-grep --grep="^feat:" --grep="^fix:" --grep="!" --grep="^chore: bump version" --pretty=format:"- %s (%h)" | head -5)
+        OTHER=$(git log $COMMIT_RANGE --invert-grep --grep="^feat:" --grep="^fix:" --grep="^release:" --grep="!" --grep="^chore:" --grep="^docs:" --grep="^style:" --grep="^refactor:" --grep="^test:" --grep="^ci:" --pretty=format:"- %s (%h)" | head -5)
         if [[ -n "$OTHER" ]]; then
           echo "$OTHER" >> RELEASE_NOTES.md
         else
