--- a/.github/actions/npm/jobs/publish-github-packages/action.yml
+++ b/.github/actions/npm/jobs/publish-github-packages/action.yml
@@ -42,6 +42,52 @@ runs:
         echo "- 🔄 Starting GitHub Packages publication for ${{ inputs.package-name }}@${{ inputs.version }}" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
 
+    - name: Generate publish command
+      id: generate-command
+      shell: bash
+      run: |
+        # Generate appropriate publish command for GitHub Packages
+        PACKAGE_NAME="${{ inputs.package-name }}"
+        CUSTOM_CMD="${{ inputs.publish-command }}"
+        
+        if [ -n "$CUSTOM_CMD" ]; then
+          echo "🔧 Using custom publish command"
+          FINAL_CMD="$CUSTOM_CMD"
+        else
+          echo "🔧 Generating GitHub Packages publish command"
+          
+          # For GitHub Packages, we typically want to match repository visibility
+          REPO_VISIBILITY="${{ github.event.repository.private == false && 'public' || 'private' }}"
+          echo "📊 Repository visibility: $REPO_VISIBILITY"
+          
+          # GitHub Packages access level should match repo visibility by default
+          if [ "$REPO_VISIBILITY" = "public" ]; then
+            ACCESS_LEVEL="public"
+          else
+            ACCESS_LEVEL="restricted"
+          fi
+          
+          echo "🔒 Package access level: $ACCESS_LEVEL"
+          
+          # Generate command
+          if [ "${{ inputs.package-manager }}" = "yarn" ]; then
+            if [ "$ACCESS_LEVEL" = "public" ]; then
+              FINAL_CMD="yarn publish --access public"
+            else
+              FINAL_CMD="yarn publish --access restricted"
+            fi
+          else
+            if [ "$ACCESS_LEVEL" = "public" ]; then
+              FINAL_CMD="npm publish --access public"
+            else
+              FINAL_CMD="npm publish --access restricted"
+            fi
+          fi
+        fi
+        
+        echo "📝 Final publish command: $FINAL_CMD"
+        echo "command=$FINAL_CMD" >> $GITHUB_OUTPUT
+
     - name: Publish package to GitHub Packages
       id: publish-package
       uses: CLDMV/.github/.github/actions/npm/steps/publish-package@v1
@@ -52,7 +98,7 @@ runs:
         version: ${{ inputs.version }}
         node-version: ${{ inputs.node-version }}
         package-manager: ${{ inputs.package-manager }}
-        publish-command: ${{ inputs.publish-command }}
+        publish-command: ${{ steps.generate-command.outputs.command }}
         auth-token: ${{ inputs.github-token }}
         artifact-name: ${{ inputs.artifact-name }}
 
@@ -63,7 +109,16 @@ runs:
         # Extract org and package name for GitHub Packages URL
         ORG_NAME=$(echo "${{ github.repository }}" | cut -d'/' -f1)
         PACKAGE_NAME=$(echo "${{ inputs.package-name }}" | sed 's|^@[^/]*/||')
-        echo "- ✅ GitHub Packages: Published [${{ inputs.package-name }}@${{ inputs.version }}](https://github.com/$ORG_NAME/$PACKAGE_NAME/pkgs/npm/$PACKAGE_NAME) successfully" >> $GITHUB_STEP_SUMMARY
+        
+        # Format version - ensure no double "v" prefix
+        VERSION="${{ inputs.version }}"
+        if [[ "$VERSION" =~ ^v ]]; then
+          DISPLAY_VERSION="$VERSION"
+        else
+          DISPLAY_VERSION="v$VERSION"
+        fi
+        
+        echo "- ✅ GitHub Packages: Published [${{ inputs.package-name }} $DISPLAY_VERSION](https://github.com/orgs/$ORG_NAME/packages/npm/$PACKAGE_NAME)" >> $GITHUB_STEP_SUMMARY
 
     - name: Update Summary - GitHub Packages Failure
       if: steps.publish-package.outputs.published != 'true'
