--- a/.github/actions/git/steps/check-release-commit/action.yml
+++ b/.github/actions/git/steps/check-release-commit/action.yml
@@ -39,6 +39,10 @@ runs:
           echo "should-create-pr=true" >> $GITHUB_OUTPUT
           echo "has-breaking=false" >> $GITHUB_OUTPUT
           
+          # Fetch all tags to ensure we have the complete tag history
+          echo "🔍 Fetching all tags from remote..."
+          git fetch --tags --force
+          
           # Analyze commits since last release to determine version bump
           LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
           if [ -z "$LAST_TAG" ]; then
@@ -48,17 +52,17 @@ runs:
             echo "Last tag: $LAST_TAG"
             COMMIT_RANGE="$LAST_TAG..HEAD"
             
-            # Check for breaking changes in the range
-            BREAKING_COMMITS=$(git log $COMMIT_RANGE --grep="!" --oneline)
-            BREAKING_BODY=$(git log $COMMIT_RANGE --grep="BREAKING CHANGE" --oneline)
+            # Check for breaking changes in the range (exclude previous release commits)
+            BREAKING_COMMITS=$(git log $COMMIT_RANGE --grep="!" --not --grep="^release" --oneline)
+            BREAKING_BODY=$(git log $COMMIT_RANGE --grep="BREAKING CHANGE" --not --grep="^release" --oneline)
             
             if [[ -n "$BREAKING_COMMITS" ]] || [[ -n "$BREAKING_BODY" ]]; then
               echo "version-bump=major" >> $GITHUB_OUTPUT
               echo "has-breaking=true" >> $GITHUB_OUTPUT
               echo "🚀 Major release - breaking changes detected in commit history"
             else
-              # Check for features
-              FEATURE_COMMITS=$(git log $COMMIT_RANGE --grep="^feat:" --oneline)
+              # Check for features (exclude previous release commits)
+              FEATURE_COMMITS=$(git log $COMMIT_RANGE --grep="^feat:" --not --grep="^release" --oneline)
               if [[ -n "$FEATURE_COMMITS" ]]; then
                 echo "version-bump=minor" >> $GITHUB_OUTPUT
                 echo "🎉 Minor release - new features detected"
